--- a/.github/workflows/k2p.yml
+++ b/.github/workflows/k2p.yml
@@ -5,17 +5,15 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-- name: Installation depends
   run: |
     sudo apt-get update
     sudo apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint
 
-- name: Clone source code
-  run: |
+
     git clone https://github.com/coolsnowwolf/lede
 
-- name: Clone source code
-  run: |
+
+
     git clone https://github.com/openwrt/openwrt
     cd openwrt
     ./scripts/feeds update -a
@@ -74,8 +72,7 @@ jobs:
           #CONFIG_PACKAGE_luci-app-nft-qos=y
           EOF
 
- - name: Compile firmware
-        run: |
+          run:
           make -j$(nproc) || make -j1 V=s
           echo "======================="
           echo "Space usage:"
@@ -85,11 +82,10 @@ jobs:
           du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
           du -h --max-depth=1 ./build_dir
           du -h --max-depth=1 ./bin
-      - name: Prepare artifact
-        run: find ./bin/targets/ -type d -name "packages" | xargs rm -rf {}
+          run:
+          find ./bin/targets/ -type d -name "packages" | xargs rm -rf {}
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@master
-        with:
+
+          with:
           name: OpenWrt firmware
           path: ./bin/targets/
