--- a/.github/workflows/k2p.yml
+++ b/.github/workflows/k2p.yml
@@ -65,12 +65,12 @@ jobs:
           EOF
     - name: Download package
       run: |
-        cd openwrt && make download -j8
+        cd lede && make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
     - name: Build
       run: |
-        cd openwrt
+        cd lede
         make -j$(nproc)
     - name : Upload artifact
       uses: actions/upload-artifact@master
